# radarScan

./: .ninja_deps  .ninja_log  AudioHealthChecker.cpp  AudioHealthChecker.h  AudioTestWavGenerator.cpp  AudioTestWavGenerator.h  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  Makefile  NetworkMonitorQt.cpp  NetworkMonitorQt.h  Pzem004Tv30Qt.cpp  Pzem004Tv30Qt.h  README.md  VolumeMonitor.cpp  VolumeMonitor.h  audioworker.cpp  audioworker.h  bme280worker.cpp  bme280worker.h  brightness.cpp  brightness.h  build.ninja  cmake_install.cmake  config.ini  configmanager.cpp  configmanager.h  cputemperatureworker.cpp  cputemperatureworker.h  exampleaudiocheck.cpp  exampleaudiogenerator.cpp  gpio.cpp  gpio.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  microphonecontrol.cpp  (+20 more)
.cmake/api/v1/reply/: cache-v2-5d592ce81f83bbb8f345.json  cache-v2-625df19c40321a9d977e.json  cache-v2-e0cdb4e0851c352a19c1.json  cmakeFiles-v1-1db9762441365093e979.json  cmakeFiles-v1-487e14aa1c4b7d79b3b2.json  cmakeFiles-v1-67c92ad198544fee693a.json  cmakeFiles-v1-9897d716b535ab1672aa.json  cmakeFiles-v1-eba37450bb1e43dcbabe.json  codemodel-v2-0b735d3a821c3c501f21.json  codemodel-v2-12f1b14e0180e248da47.json  codemodel-v2-1dec32244f9e9e51b093.json  codemodel-v2-1edb6ccc718e47716579.json  codemodel-v2-2ef8abe962fb2cf223d6.json  codemodel-v2-30d79d1283761598a24d.json  codemodel-v2-3cb554b3bdb2a8db3512.json  codemodel-v2-52ae6cfbe3939e53adbd.json  codemodel-v2-6b20a1a79f6f943eea48.json  codemodel-v2-94a5c543e464ca835716.json  codemodel-v2-968a2aa52144ae184577.json  codemodel-v2-d2738bc2cf6763e77816.json  codemodel-v2-d3b23b10f45235085458.json  codemodel-v2-d7031144344796716137.json  codemodel-v2-d9b2186fcb2229085873.json  codemodel-v2-fe46231de4128a7bbe9d.json  index-2026-02-03T07-07-49-0470.json  index-2026-02-06T03-28-37-0881.json  index-2026-02-09T03-28-53-0209.json  index-2026-02-10T02-13-54-0285.json  index-2026-02-12T06-50-37-0669.json  index-2026-03-10T04-33-27-0685.json  index-2026-03-12T08-51-21-0962.json  index-2026-06-30T02-49-13-0910.json  index-2026-06-30T10-32-27-0320.json  index-2026-07-09T02-08-48-0273.json  index-2026-07-16T01-47-26-0694.json  index-2026-07-20T03-43-48-0013.json  index-2026-07-22T07-32-23-0520.json  index-2026-07-22T10-10-43-0118.json  target-MyQt6App-Release-4f3c932aa5e9f36e6e9d.json  target-MyQt6App-Release-5eb33a47ba2b7e4d57af.json  (+69 more)
.cmake/api/v1/reply.prev/: cache-v2-32d788752afcc2265a71.json  cache-v2-48fb230d9609bba298ba.json  cache-v2-635748f154e8424593ce.json  cache-v2-a02637e2f9757143ad16.json  cmakeFiles-v1-a0718bf31fc99931d73a.json  cmakeFiles-v1-a111bc2594cb1ee122fa.json  cmakeFiles-v1-b23bfbe4ade3732589f1.json  cmakeFiles-v1-c08058410e8c425edba9.json  cmakeFiles-v1-d52ac1d3107dae172a39.json  codemodel-v2-00c8ae795f0998e0d0e7.json  codemodel-v2-2a78d48f42e763942c51.json  codemodel-v2-325bfcf005e4311351f7.json  codemodel-v2-4494bc4a57d54a0f492f.json  codemodel-v2-59a2531c3c0c7263d8a6.json  codemodel-v2-6120b885e8902f9b66ef.json  codemodel-v2-6cb366773b1249d9cf2f.json  codemodel-v2-93aecd40be2558f5e282.json  codemodel-v2-98134908af2964a6093f.json  codemodel-v2-a6dd69e70d47055f0e84.json  codemodel-v2-cc7e4cee4c491f254d8d.json  codemodel-v2-dec102b85a900f909cb1.json  index-2026-02-03T07-07-31-0487.json  index-2026-02-03T08-03-33-0746.json  index-2026-02-03T08-03-52-0973.json  index-2026-02-08T14-45-36-0993.json  index-2026-02-09T07-02-20-0539.json  index-2026-02-09T07-05-27-0630.json  index-2026-02-12T03-11-47-0256.json  index-2026-02-12T08-44-38-0643.json  index-2026-02-12T08-51-18-0137.json  index-2026-02-26T09-58-11-0342.json  index-2026-03-04T06-54-51-0414.json  index-2026-03-05T06-21-43-0806.json  index-2026-03-10T04-33-07-0377.json  index-2026-06-30T02-47-29-0173.json  target-MyQt6App-Release-2adfeaf93761c9c89fab.json  target-MyQt6App-Release-48fd6911dfb4e10e6cf1.json  target-MyQt6App-Release-68009f51321878312bb2.json  target-MyQt6App-Release-7fa55904a51a35877892.json  target-MyQt6App-Release-86912f8954cc8d66ae06.json  (+58 more)
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/info_plist/radarScan/: Info.plist
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: NetworkMonitorQt.cpp.00EBA0270C0B9307.idx  NetworkMonitorQt.h.60AC365F4165E670.idx  QAudioOutput.A5E221A6C4EE8B8A.idx  QByteArray.C933C750C3F4993D.idx  QCoreApplication.F86C9871449E2777.idx  QCursor.AA35B148CA53B457.idx  QDBusArgument.A3DB50534B0FAE5F.idx  QDBusConnection.081AC4DDEF97C9DE.idx  QDBusInterface.8727A50F73A742EC.idx  QDBusObjectPath.E7174D64E60145E7.idx  QDBusReply.B342C536D0A3F7DC.idx  QDebug.EA406E71EF1243C1.idx  QJsonArray.05BDAB0C57DE8DEB.idx  (+691 more)
MyQt6App.app/Contents/MacOS/: MyQt6App
MyQt6App_autogen/: deps  mocs_compilation.cpp
MyQt6App_autogen/EWIEGA46WW/: moc_audioworker.cpp  moc_audioworker.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_payloadprocessor.cpp.d  moc_qcustomplot.cpp.d  moc_socketeventworker.cpp  moc_socketeventworker.cpp.d  moc_socketioclient.cpp  moc_socketioclient.cpp.d
MyQt6App_autogen/include/: ui_mainwindow.h
radarScan.app/Contents/: Info.plist
radarScan.app/Contents/MacOS/: radarScan
radarScan_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
radarScan_autogen/EWIEGA46WW/: moc_NetworkMonitorQt.cpp  moc_NetworkMonitorQt.cpp.d  moc_Pzem004Tv30Qt.cpp  moc_Pzem004Tv30Qt.cpp.d  moc_VolumeMonitor.cpp  moc_VolumeMonitor.cpp.d  moc_audioworker.cpp  moc_audioworker.cpp.d  moc_bme280worker.cpp  moc_bme280worker.cpp.d  moc_brightness.cpp  moc_brightness.cpp.d  moc_cputemperatureworker.cpp  moc_cputemperatureworker.cpp.d  moc_gpio.cpp  moc_gpio.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_networkmonitor.cpp  moc_networkmonitor.cpp.d  moc_payloadprocessor.cpp  moc_payloadprocessor.cpp.d  moc_qcustomplot.cpp  moc_qcustomplot.cpp.d  moc_socketeventworker.cpp  moc_socketeventworker.cpp.d  moc_socketioclient.cpp  moc_socketioclient.cpp.d  moc_systemdmonitorqt.cpp  moc_systemdmonitorqt.cpp.d  moc_utilities.cpp  moc_utilities.cpp.d  moc_volume.cpp  moc_volume.cpp.d
radarScan_autogen/include/: ui_mainwindow.h
